<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#8F8E8E"
    tools:context=".New_password_input">

        <!-- Agrega un FrameLayout como fondo de toda la actividad -->
        <FrameLayout
            android:id="@+id/background_dim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="invisible"
            android:elevation="50dp">
        </FrameLayout>


        <Button
            android:id="@+id/myprofile"
            android:layout_width="232dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/lightGreen"
            android:fontFamily="sans-serif-black"
            android:text="Reestablecer"
            android:textColorHighlight="@color/lightGreen"
            android:textColorLink="@color/lightGreen"
            android:textSize="28sp"
            android:textStyle="bold"
            app:cornerRadius="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redframe10"
            app:layout_constraintVertical_bias="0.98" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmar contraseña"
            android:textColor="#7C7C7C"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.554" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nueva contraseña"
            android:textColor="#19DF34"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.656" />

        <TextView
            android:id="@+id/condition1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tu contraseña debe contener al menos 8 caracteres"
            android:textColor="#FA3C1B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input2"
            app:layout_constraintVertical_bias="0.096" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Las contraseñas coinciden"
            android:textColor="#FA3C1B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input2"
            app:layout_constraintVertical_bias="0.009" />

        <TextView
            android:id="@+id/condition2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Incluye mayúsculas y minúsculas"
            android:textColor="#FA3C1B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input2"
            app:layout_constraintVertical_bias="0.18" />

        <TextView
            android:id="@+id/condition3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Contiene caracteres especiales como !, @, #, o %"
            android:textColor="#FA3C1B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/condition1"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/condition4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Contiene al menos un número"
            android:textColor="#FA3C1B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input2"
            app:layout_constraintVertical_bias="0.341" />

        <ImageView
            android:id="@+id/redframe10"
            android:layout_width="410dp"
            android:layout_height="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/upperredframe" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="413dp"
            android:layout_height="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.008"
            app:srcCompat="@drawable/redframe" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="413dp"
            android:layout_height="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.008"
            app:srcCompat="@drawable/redframe" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="326dp"
            android:layout_height="314dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/logo_foodbank" />

        <Button
            android:id="@+id/backButton2"
            android:layout_width="139dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/lightGreen"
            android:elevation="8dp"
            android:fontFamily="sans-serif-black"
            android:text="Regresar"
            android:textSize="21sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013"
            app:srcCompat="@drawable/arrow_foreground" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reestablecer contraseña"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311" />


        <EditText
            android:id="@+id/password_input"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@android:drawable/ic_secure"
            android:drawablePadding="7dp"
            android:drawableTint="#BCB7B7"
            android:elevation="7dp"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/redframe10"
            app:layout_constraintVertical_bias="0.502" />

        <EditText
            android:id="@+id/password_input2"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@android:drawable/ic_secure"
            android:drawablePadding="7dp"
            android:drawableTint="#BCB7B7"
            android:elevation="7dp"
            android:ems="10"
            android:hint="Confirmar contraseña"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintVertical_bias="0.266" />

        <ImageButton
            android:id="@+id/passwordToggle"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/closedeye"
            android:backgroundTint="#7C7C7C"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/password_input"
            app:layout_constraintEnd_toEndOf="@+id/password_input"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintTop_toTopOf="@+id/password_input"
            app:layout_constraintVertical_bias="0.416"
            app:srcCompat="@drawable/open_eye" />

        <ImageButton
            android:id="@+id/passwordToggle2"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:background="@drawable/closedeye"
            android:backgroundTint="#7C7C7C"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/password_input2"
            app:layout_constraintEnd_toEndOf="@+id/password_input2"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="@+id/password_input2"
            app:layout_constraintTop_toTopOf="@+id/password_input2"
            app:layout_constraintVertical_bias="0.545"
            app:srcCompat="@drawable/open_eye" />


</androidx.constraintlayout.widget.ConstraintLayout>

