...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:srcCompat="@mipmap/logo_foodbank" />


    <Button
        android:id="@+id/LogInButton"
        android:layout_width="193dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:background="@drawable/green_button_cutom_input"
        android:fontFamily="sans-serif-black"
        android:foreground="@drawable/green_button_cutom_input"
...
